verify user documentation added, AuthPayload fixed and README updated
